# oh-my-career-agent

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  config.yaml.example  docker-compose.yml
backend/: alembic.ini  langgraph.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 002_gap_progress_float.py  20260413_01_add_candidate_profile.py  20260413_02_add_interview_stories.py  20260413_03_extend_jd_review_artifacts.py  20260413_04_extend_update_suggestions_apply_result.py  20260413_05_add_pdf_export_fields.py  20260413_06_rename_master_resume.py  20260415_01_add_source_achievement_id.py  20260416_01_add_interactive_analysis_fields.py  20260417_01_add_education.py  6c3da8c67690_career_data_model_restructure.py  da4d2ca574d9_add_contact_json_to_profile.py  dc1046711b25_initial_schema.py
backend/scripts/: seed.py  seed_test_data.py
backend/src/: main.py
backend/src/agent/: configuration.py  graph.py  state.py
backend/src/api/: __init__.py  achievements.py  dashboard.py  educations.py  gaps.py  interactive_analysis.py  jd.py  pipeline_stream.py  profile.py  projects.py  resumes.py  role_analyze.py  roles.py  router.py  stories.py  suggestions.py  work_experiences.py
backend/src/core/: config.py  database.py  llm.py  security.py
backend/src/models/: __init__.py  achievement.py  agent.py  base.py  education.py  gap.py  jd.py  profile.py  project.py  resume.py  skill.py  story.py  target_role.py  user.py  work_experience.py  workspace.py
backend/src/prompts/: achievement_analysis.py  explain.py  gap_evaluation.py  jd_review.py  jd_tailoring.py  resume_update.py  role_matching.py  story_extraction.py
backend/src/schemas/: achievement.py  (+10 more)
backend/tests/: conftest.py
mcp/careeragent-mcp/: pyproject.toml
(+118 files in other folders)
